finished run_conumee

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,8 @@ Imports:
     doParallel,
     foreach,
     itertools,
-    BiocGenerics
+    BiocGenerics,
+    data.table
 Depends: 
     R (>= 2.10)
 LazyData: true
