--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,9 +7,12 @@ export(queryfy)
 export(read.metharray.exp.par)
 export(read_intensity)
 export(run_conumee)
+export(scna)
 import(minfi)
 importFrom(BiocGenerics,cbind)
 importFrom(BiocGenerics,combine)
+importFrom(S4Vectors,queryHits)
+importFrom(data.table,"%ilike%")
 importFrom(data.table,":=")
 importFrom(data.table,.BY)
 importFrom(data.table,.EACHI)
